--- a/habitual/backend/pyproject.toml
+++ b/habitual/backend/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "habitual"
 version = "0.1.0"
-description = "Add your description here"
+description = "A habit tracker"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
