--- a/habitual/backend/pyproject.toml
+++ b/habitual/backend/pyproject.toml
@@ -7,3 +7,8 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.116.1",
 ]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.12.11",
+]
