--- a/habitual/frontend/package.json
+++ b/habitual/frontend/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack -p 3003",
     "build": "next build --turbopack",
-    "start": "next start"
+    "start": "next start -p 3003"
   },
   "dependencies": {
     "react": "19.1.0",
