--- a/habitual/backend/pyproject.toml
+++ b/habitual/backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.116.1",
+    "pydantic>=2.11.7",
 ]
 
 [dependency-groups]
