--- a/habitual/backend/pyproject.toml
+++ b/habitual/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.116.1",
     "pydantic>=2.11.7",
+    "sqlmodel>=0.0.24",
 ]
 
 [dependency-groups]
