--- a/habitual/backend/pyproject.toml
+++ b/habitual/backend/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastapi[standard]>=0.116.1",
     "pydantic>=2.11.7",
     "sqlmodel>=0.0.24",
+    "pymysql>=1.1.2",
 ]
 
 [dependency-groups]
