--- a/habitual/backend/pyproject.toml
+++ b/habitual/backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pydantic>=2.11.7",
     "sqlmodel>=0.0.24",
     "pymysql>=1.1.2",
+    "cryptography>=45.0.7",
 ]
 
 [dependency-groups]
