--- a/habitual/frontend/package.json
+++ b/habitual/frontend/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 3003",
-    "build": "next build --turbopack",
+    "dev": "next dev -p 3003",
+    "build": "next build",
     "start": "next start -p 3003"
   },
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "next": "15.5.2",
+    "@mantine/core": "^7.12.2",
+    "@mantine/hooks": "^7.12.2"
   },
   "devDependencies": {
     "typescript": "^5",
