--- a/habitual/frontend/package.json
+++ b/habitual/frontend/package.json
@@ -12,7 +12,9 @@
     "react-dom": "19.1.0",
     "next": "15.5.2",
     "@mantine/core": "^7.12.2",
-    "@mantine/hooks": "^7.12.2"
+    "@mantine/hooks": "^7.12.2",
+    "lucide-react": "^0.460.0",
+    "dayjs": "^1.11.13"
   },
   "devDependencies": {
     "typescript": "^5",
