--- a/habitual/frontend/package.json
+++ b/habitual/frontend/package.json
@@ -12,7 +12,6 @@
     "react-dom": "19.1.0",
     "next": "15.5.2",
     "@mantine/core": "^7.12.2",
-    "@mantine/hooks": "^7.12.2",
     "lucide-react": "^0.460.0",
     "dayjs": "^1.11.13"
   },
@@ -20,8 +19,6 @@
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@types/react-dom": "^19"
   }
 }
